# Cpp

./: README.md
01-test/: CMakeLists.txt  board.cpp  board.h  main.cpp  point.cpp  point.h  rook.cpp  rook.h
09-async/: CMakeLists.txt  main.cpp
yandex/: CMakeLists.txt
yandex/01-max_element_by_priedikat/: CMakeLists.txt  max_element_if.cpp
yandex/02-table/: CMakeLists.txt  table.cpp
